# memory-agent-tool

./: .gitignore  AGENTS.md  Hermes-agent记忆拆解.md  README.md  pyproject.toml  基于 Hermes Agent 的项目级记忆系统裁剪方案.md  项目级记忆系统模块清单 + 状态流转设计.md
docs/: AGENTS.md
docs/integrations/: real-clients.md
docs/project/: project-delivery.md
docs/usage/: client-integration.md
docs/版本变更摘要/: 摘要20260422.md
src/memory_agent_tool/: AGENTS.md  __init__.py  __main__.py  app.py  cli.py  client_acceptance.py  config.py  copilot_acp.py  database.py  e2e.py  gateway.py  logging.py  mcp.py  mcp_server.py  models.py  providers.py  resolver.py  rules.py  scoring.py  services.py
src/memory_agent_tool/services/: __init__.py  conflict_service.py  container.py  maintenance_service.py  memory_service.py  project_service.py  retrieval_service.py  session_service.py  skill_service.py  status_service.py  utils.py
tests/: AGENTS.md  conftest.py  test_acceptance_export_and_status.py  test_cli_delivery_runtime.py  test_client_acceptance.py  test_client_acceptance_report.py  test_client_and_mcp_contracts.py  test_codex_mcp_stdio_server.py  test_copilot_real_adapter.py  test_database_migrations.py  test_memory_lifecycle.py  test_platform_runtime.py  test_project_key_compatibility.py  test_project_memory_tool.py  test_provider_config_persistence.py  test_provider_runtime.py  test_real_client_commands.py  test_retrieval_ranking.py  test_skill_learning_loop.py  test_trae_cli_flow.py  test_trae_real_adapter.py
